--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.0.0-beta.17",
     "ember-disable-proxy-controllers": "^0.7.0",
-    "ember-export-application-global": "^1.0.2"
+    "ember-export-application-global": "^1.0.2",
+    "ember-i18n": "git+https://github.com/jamesarosen/ember-i18n.git#12e56e755ac376d4e716dee1931cbc68bfac0661"
   }
 }
