--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "location-aware-ember",
-  "version": "0.0.0",
-  "description": "Small description for location-aware-ember goes here",
+  "version": "0.1.0",
+  "description": "A location-aware demo ember application",
   "private": true,
   "directories": {
     "doc": "doc",
