--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
+    "broccoli-clean-css": "1.0.0",
     "ember-cli": "0.2.5",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-babel": "^5.0.0",
@@ -29,10 +30,12 @@
     "ember-cli-dotenv": "^0.4.0",
     "ember-deploy-redis": "0.0.2",
     "ember-deploy-s3": "0.0.3",
+    "ember-cli-foundation-sass": "1.1.1",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.13",
+    "ember-cli-sass": "3.1.0",
     "ember-cli-server-variables": "0.0.1",
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.0.0-beta.17",
