--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "ember-cli-babel": "^5.0.0",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
+    "ember-cli-deploy": "^0.4.1",
+    "ember-cli-dotenv": "^0.4.0",
+    "ember-deploy-redis": "0.0.2",
+    "ember-deploy-s3": "0.0.3",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
@@ -34,5 +38,8 @@
     "ember-disable-proxy-controllers": "^0.7.0",
     "ember-export-application-global": "^1.0.2",
     "ember-i18n": "git+https://github.com/jamesarosen/ember-i18n.git#12e56e755ac376d4e716dee1931cbc68bfac0661"
+  },
+  "dependencies": {
+    "dotenv": "^1.1.0"
   }
 }
