--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "ember server",
     "build": "ember build",
+    "start": "ember server",
     "test": "ember test"
   },
   "repository": "",
@@ -19,31 +19,28 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.2",
+    "broccoli-asset-rev": "^2.1.2",
     "broccoli-clean-css": "1.0.0",
-    "ember-cli": "0.2.5",
-    "ember-cli-app-version": "0.3.3",
-    "ember-cli-babel": "^5.0.0",
+    "ember-cli": "1.13.8",
+    "ember-cli-app-version": "0.5.0",
+    "ember-cli-babel": "^5.1.3",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.0.0",
-    "ember-cli-deploy": "^0.4.1",
-    "ember-cli-dotenv": "^0.4.0",
-    "ember-deploy-redis": "0.0.2",
-    "ember-deploy-s3": "0.0.3",
+    "ember-cli-dependency-checker": "^1.0.1",
+    "ember-cli-dotenv": "1.0.4",
     "ember-cli-foundation-sass": "1.1.1",
-    "ember-cli-htmlbars": "0.7.6",
-    "ember-cli-ic-ajax": "0.1.1",
-    "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.13",
+    "ember-cli-htmlbars": "0.7.9",
+    "ember-cli-htmlbars-inline-precompile": "^0.2.0",
+    "ember-cli-ic-ajax": "0.2.1",
+    "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-qunit": "^1.0.0",
+    "ember-cli-release": "0.2.3",
     "ember-cli-sass": "3.1.0",
-    "ember-cli-server-variables": "0.0.1",
-    "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.0.0-beta.17",
-    "ember-disable-proxy-controllers": "^0.7.0",
-    "ember-export-application-global": "^1.0.2",
-    "ember-i18n": "git+https://github.com/jamesarosen/ember-i18n.git#12e56e755ac376d4e716dee1931cbc68bfac0661"
-  },
-  "dependencies": {
-    "dotenv": "^1.1.0"
+    "ember-cli-server-variables": "0.0.4",
+    "ember-cli-sri": "^1.0.3",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-data": "1.13.8",
+    "ember-disable-proxy-controllers": "^1.0.0",
+    "ember-export-application-global": "^1.0.3",
+    "ember-i18n": "4.1.4"
   }
 }
