--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "ember-cli-babel": "^5.1.3",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.1",
+    "ember-cli-deploy": "0.5.0",
+    "ember-cli-deploy-build": "0.1.0",
+    "ember-cli-deploy-display-revisions": "0.1.0",
+    "ember-cli-deploy-redis": "0.1.0",
+    "ember-cli-deploy-revision-data": "0.1.0",
+    "ember-cli-deploy-s3": "0.1.0",
     "ember-cli-dotenv": "1.0.4",
     "ember-cli-foundation-sass": "1.1.1",
     "ember-cli-htmlbars": "0.7.9",
